plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudGcpVersion', "5.6.0")
    set('springCloudVersion', "2023.0.3")
}

dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail' // email
    implementation 'org.springframework.boot:spring-boot-starter-webflux' // webclient
    implementation 'org.hibernate:hibernate-core:6.1.7.Final'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2' // jtw
    implementation 'io.projectreactor:reactor-core:3.4.18' // flux
    implementation 'com.google.code.gson:gson:2.10.1' // gson
    implementation 'jakarta.annotation:jakarta.annotation-api'

    runtimeOnly 'mysql:mysql-connector-java:8.0.30'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2' // jwt
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2' // jwt

    testCompileOnly 'org.projectlombok:lombok'

    testAnnotationProcessor 'org.projectlombok:lombok'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'mysql:mysql-connector-java:8.0.30'

    implementation 'io.netty:netty-resolver-dns-native-macos:4.2.0.Alpha5'
}

tasks.named('test') {
    useJUnitPlatform()
}
